[package]
name = "chapter_updater"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12.28", default-features = false, features = [
  "rustls-tls",
  "socks",
] }
serenity = { version = "0.12", default-features = false, features = [
  "model",
  "http",
  "rustls_backend",
] }
scraper = "0.26.0"
